# LBP_Comparison

./: .gitignore  CMakeLists.txt  main.cpp  main.exp
include/: lbp_cuda.cuh  lbp_seq.h  util.h
plots/: heatmap.py  plot1.py  plot2.py
src/: lbp_cuda.cu  lbp_seq.cpp
